Add code style config; started playing with events and commands

--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Infra/EventStoreTest.fs" />
+    <Compile Include="Domain\ArticleTest.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
