--- a/Src/Src.fsproj
+++ b/Src/Src.fsproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="./Domain/Types.fs" />
     <Compile Include="./Domain/Article.fs" />
-    <Compile Include="./Infra/Types.fs" />
     <Compile Include="./Infra/EventStore.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
