add handling logic of update content and assign to copy writer

--- a/fantomas-config.json
+++ b/fantomas-config.json
@@ -18,5 +18,5 @@
     "IndentOnTryWith": true,
     "SpaceAroundDelimiter": true,
     "MaxIfThenElseShortWidth": 40,
-    "StrictMode": true
+    "StrictMode": false
 }
