--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="./Types/WrappedStringTest.fs" />
     <Compile Include="Infra/EventStoreTest.fs" />
     <Compile Include="Domain\ArticleTest.fs" />
     <Compile Include="Program.fs" />
