simplify namespace and modules

--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <Compile Include="Infra/EventStoreTest.fs" />
-    <Compile Include="./Domain/WrappedStringTest.fs" />
-    <Compile Include="Domain\ArticleTest.fs" />
+    <Compile Include="Domain/WrappedStringTest.fs" />
+    <Compile Include="Domain/ArticleTest.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
